fix jumping text and focus on collapsible summary

--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -45,6 +45,8 @@ summary::before {
   padding-right: 1rem;
   content: '\25B8'; /* Instead of Triangle closed */
   color: $c__dark-background-collapsible;
+  display: inline-block;
+  width: 14px;
 }
 details[open] summary::before {
   padding-right: 1rem;
@@ -64,4 +66,11 @@ details {
 details > ol {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+details > ol > li {
+  padding-top: 0.5rem;
+}
+
+*:focus {
+    outline: none;
 }
